# payrex-rust

./: Cargo.toml  LICENSE  README.md
payrex/: Cargo.toml
payrex/examples/: basic_usage.rs
payrex/src/: client.rs  config.rs  error.rs  lib.rs
payrex/src/resources/: billing_statement_line_items.rs  billing_statements.rs  checkout_sessions.rs  customers.rs  payment_intents.rs  payments.rs  payouts.rs  refunds.rs  webhooks.rs
payrex/src/types/: common.rs  currency.rs  event.rs  ids.rs  metadata.rs  pagination.rs  payment_methods.rs  timestamp.rs
payrex/tests/: tests_billing_statement_line_items.rs  tests_billing_statements.rs  tests_checkout_sessions.rs  tests_customers.rs  tests_payment_intents.rs  tests_payments.rs  tests_payouts.rs  tests_refunds.rs  tests_webhooks.rs
payrex/tests/fixtures/: billing-statement-line-item.json  billing-statement.json  checkout-session.json  customer.json  err-put-billing-statement-line-item.json  payment-intent.json  payment.json  payout.json  refund.json  webhook-list.json  webhook.json
payrex/tests/support/: helpers.rs  mod.rs
payrex_derive/: Cargo.toml
payrex_derive/src/: derive.rs  fields.rs  lib.rs  utils.rs
